--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,7 +45,7 @@ label{
     border: none;  
     border-radius: 17px;  
     padding-left: 7px;  
-    color: white;  
+    color: grey;  
   
   
 }  
