--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ body
 {  
     margin: 0;  
     padding: 0;  
-    background-color:#6abadeba;  
+    background-color:#ffffff;  
     font-family: 'Arial';  
 }  
 .login{  
@@ -11,7 +11,7 @@ body
         margin: auto;  
         margin: 20 0 0 450px;  
         padding: 80px;  
-        background: #23463f;  
+        background: #999999;  
         border-radius: 15px ;  
           
 }  
