--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ body
 {  
     margin: 0;  
     padding: 0;  
-    background-color:#ffffff;  
+    background-color:#FFFFFF;  
     font-family: 'Arial';  
 }  
 .login{  
